--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "jar-product-case-study",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -84,5 +84,5 @@
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
   },
-  "homepage": "https://anishguruvelli.github.io/dezerv-ai-navigator"
+  "homepage": "https://anishguruvelli.github.io/jar-product-case-study"
 }
